--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Website created using Vite" />
+    <meta
+      name="description"
+      content="UpdateEC - Venta de Componentes y Periféricos Gaming para Computadoras al mejor Precio."
+    />
     <link rel="apple-touch-icon" href="/logo192.png" />
-    <title>React | Template | RysthCraft</title>
+    <title>UpdateEC | Venta de Componentes y Periféricos Gaming | Guayaquil | Ecuador</title>
   </head>
   <body>
     <div id="root"></div>
