--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <title>UpdateEC | Venta de Componentes y Periféricos Gaming | Guayaquil | Ecuador</title>
   </head>
-  <body>
+  <body class="bg-slate-900">
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
     <script type="module" src="./node_modules/flowbite/dist/flowbite.min.js"></script>
